tests/paczka1/small_fuzzy/91959348.err
Error in line 1: XUJaC42 S67 27,6
Error in line 6: xxzRNI2Jj A9 98,8
Error in line 3: S439 S16 36,2
Error in line 12: xxzRNI2Jj S67 68,3
